# big

./: .clang-format  CMakeLists.txt  main.cpp
BigInt/: BigInt.cpp  BigInt.h  BigUInt.cpp  BigUInt.h  BigUIntBase.cpp  BigUIntBase.h
Catch_tests/: BigUIntTest.cpp  CMakeLists.txt  catch.hpp
Time/: BenchMark.cpp  BenchMark.h  timer.cpp  timer.h
